# kubernetes-docs-scraper

./: .gitignore  Justfile  README.md  fs.py  main.py  pyproject.toml  scraper.py
.github/workflows/: ci.yaml  lint.yaml
